# SpaMIL

./: README.md  pyproject.toml
spamil/: __init__.py
spamil/data/datasets/: base_dataset.py
spamil/data/transforms/: base_transform.py  bulk_rnaseq_transform.py  clinical_transform.py  features_2d_transform.py  median_of_ratios.py  single_cell_rnaseq_transform.py  utils.py  visium_counts_transform.py  visium_deconv_transform.py
spamil/experiments/composed/: bulk_rnaseq_best_config.py  clinical_best_config.py  histo_best_config.py  mabmil_distillation_best_config.py  mabmil_multimodal_inference_best_config.py  single_cell_rnaseq_best_config.py  visium_counts_best_config.py
spamil/experiments/config_experiment/: repeated_crossval.py
spamil/experiments/config_trainer/: abmil_trainer_histo_survival.py  abmil_trainer_single_cell_rnaseq_survival.py  abmil_trainer_visium_counts_survival.py  abmil_trainer_visium_deconv_survival.py  mabmil_distillation_trainer_histo_visium_counts_survival.py  mabmil_multimodal_inference_trainer_histo_visium_counts_survival.py  pca_cox_trainer_survival.py
spamil/experiments/config_transform/: bulk_rnaseq_transform.py  clinical_transform.py  features_2d_transform.py  single_cell_rnaseq_transform.py  visium_counts_transform.py  visium_deconv_transform.py
spamil/models/: abmil.py  chowder.py  mabmil_distillation.py  mabmil_multimodal_inference.py  mlp.py  multimodal_abmil_early_fusion.py  multimodal_chowder_early_fusion.py  multimodal_chowder_late_fusion.py  utils.py
spamil/modules/: attention.py  extreme_layer.py  mlp.py  tile_layers.py
spamil/utils/: cindex.py  collate.py  constants.py  default_split.py
